--- a/TrelloCFD.Website/Views/Shared/_Layout.cshtml
+++ b/TrelloCFD.Website/Views/Shared/_Layout.cshtml
@@ -49,6 +49,13 @@
             </section>
         </div>
         <footer>
+            <div class="site-activity-details content-wrapper">
+                <div>
+                    <p>This site is not being actively developed, but will remain available and free!</p>
+                    <p>If there is a feature you would like added please raise an issue or even better submit a pull request on <a href="https://github.com/rhysgodfrey/trello-cfd">GitHub</a>.</p>
+                    <p>If you are looking for more features such as burndown and cycle time you may be interested in <a href="https://getcorrello.com/?ref=rhys">Corrello</a>.</p>
+                </div>
+            </div>
             <div class="content-wrapper">
                 <div class="float-left">
                     <p>&copy; @DateTime.Now.Year</p>
