Remove tagbase include and make image protocol relative

--- a/TrelloCFD.Website/Views/Home/Index.cshtml
+++ b/TrelloCFD.Website/Views/Home/Index.cshtml
@@ -37,14 +37,6 @@
     </div>
     <div class="howToUseStep howToUseStepEven">
         <h4>4. Look for bottlenecks</h4>
-        <div class="tb_imageWrapper" id="tb_d754186c-201d-4b49-bb8a-12c9f5e4422a" style="width:400px; height: 167px;"><img src="http://trello-cfd.azurewebsites.net/content/images/example2.png" alt="example2.png" /></div>
-        <script type="text/javascript">
-        (function () {
-        var tbCore = ('https:' == document.location.protocol ? 'https://tagbase.blob.core.windows.net' : 'http://s.tagba.se') + '/scripts/TagbaseCore.js';
-        var tbInstance = ('https:' == document.location.protocol ? 'https://www.mytagbase.com' : 'http://d.tagba.se') + '/scripts/Include/d754186c-201d-4b49-bb8a-12c9f5e4422a';
-        document.write('<scr' + 'ipt type="text/javascript" src="' + tbCore + '"></sc' + 'ript>');
-        document.write('<scr' + 'ipt type="text/javascript" src="' + tbInstance + '"></sc' + 'ript>');
-        })();
-        </script>
+        <div class="tb_imageWrapper" id="tb_d754186c-201d-4b49-bb8a-12c9f5e4422a" style="width:400px; height: 167px;"><img src="//trello-cfd.azurewebsites.net/content/images/example2.png" alt="example2.png" /></div>
     </div>
 </div>
