Only show banner on home and about page

--- a/TrelloCFD.Website/Views/Home/About.cshtml
+++ b/TrelloCFD.Website/Views/Home/About.cshtml
@@ -6,6 +6,14 @@
     <h1>@ViewBag.Title.</h1>
 </hgroup>
 
+<div class="site-activity-details content-wrapper" style="margin-bottom: 20px;">
+    <div>
+        <p>This site is not being actively developed, but will remain available with the current functionality and stay free!</p>
+        <p>If there is a feature you would like added please raise an issue or even better submit a pull request on <a href="https://github.com/rhysgodfrey/trello-cfd">GitHub</a>.</p>
+        <p>If you are looking for more features such as burndown and cycle time you may be interested in <a href="https://getcorrello.com/?ref=rhys">Corrello</a>.</p>
+    </div>
+</div>
+
 <article>
     <p>
         This site provides basic Cumulative Flow Diagrams based on the movement of cards between
@@ -31,13 +39,13 @@
 </article>
 
 @*<aside>
-    <h3>Aside Title</h3>
-    <p>
-        Use this area to provide additional information.
-    </p>
-    <ul>
-        <li>@Html.ActionLink("Home", "Index", "Home")</li>
-        <li>@Html.ActionLink("About", "About", "Home")</li>
-        <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
-    </ul>
-</aside>*@
+        <h3>Aside Title</h3>
+        <p>
+            Use this area to provide additional information.
+        </p>
+        <ul>
+            <li>@Html.ActionLink("Home", "Index", "Home")</li>
+            <li>@Html.ActionLink("About", "About", "Home")</li>
+            <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
+        </ul>
+    </aside>*@
