--- a/TrelloCFD.Website/Views/Home/Index.cshtml
+++ b/TrelloCFD.Website/Views/Home/Index.cshtml
@@ -21,6 +21,14 @@
     </section>
 }
 
+<div class="site-activity-details content-wrapper">
+    <div>
+        <p>This site is not being actively developed, but will remain available with the current functionality and stay free!</p>
+        <p>If there is a feature you would like added please raise an issue or even better submit a pull request on <a href="https://github.com/rhysgodfrey/trello-cfd">GitHub</a>.</p>
+        <p>If you are looking for more features such as burndown and cycle time you may be interested in <a href="https://getcorrello.com/?ref=rhys">Corrello</a>.</p>
+    </div>
+</div>
+
 <h3>How to use Trello Cumulative Flow?</h3>
 <div class="howToUse clear-fix">
     <div class="howToUseStep">
