--- a/TrelloCFD.Website/Views/Home/About.cshtml
+++ b/TrelloCFD.Website/Views/Home/About.cshtml
@@ -25,6 +25,8 @@
         This site is a side project, if your interested in improving the site or adding extra features the code is available on @Html.ActionLink("Github", "Github", "Home"), please feel free to check the
         code out and submit a pull request! If you have any issues, or suggestions @Html.ActionLink("add them to Trello", "IdeasAndBugs", "Home") or <a href="mailto:rhys@rhysgodfrey.co.uk">contact me</a>.
     </p>
+    <h2 id="cookies">Cookies</h2>
+    <p>The site only uses cookies that are required for the functionality such as login and ensuring your session is handled correctly, and that you have consented to cookies.</p>
     <h2>
         Contributors
     </h2>
