--- a/TrelloCFD.Website/Views/Shared/_Layout.cshtml
+++ b/TrelloCFD.Website/Views/Shared/_Layout.cshtml
@@ -1,21 +1,23 @@
 ﻿<!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="utf-8" />
-        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-        <meta name="keywords" content="Trello, Cumulative Flow Diagram, Kanban, Scrum" />
-        <meta name="description" content="View Cumulative Flow Diagrams based on your Trello boards, quickly and easily" />
-        <title>@ViewBag.Title - Trello Cumulative Flow Diagrams</title>
-        <link href="~/favicon.ico" rel="shortcut icon" type="image/x-icon" />
-        <meta name="viewport" content="width=device-width" />
-        @Styles.Render("~/Content/css")
-        @Styles.Render("~/Content/themes/base/css")
-        
-        @Scripts.Render("~/bundles/modernizr")
-        @Scripts.Render("~/bundles/jquery")
-        @Scripts.Render("~/bundles/jqueryui")
-        @Scripts.Render("~/bundles/highcharts")
-    </head>
+<head>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="keywords" content="Trello, Cumulative Flow Diagram, Kanban, Scrum" />
+    <meta name="description" content="View Cumulative Flow Diagrams based on your Trello boards, quickly and easily" />
+    <title>@ViewBag.Title - Trello Cumulative Flow Diagrams</title>
+    <link href="~/favicon.ico" rel="shortcut icon" type="image/x-icon" />
+    <meta name="viewport" content="width=device-width" />
+    <link rel="stylesheet" type="text/css" href="//cdnjs.cloudflare.com/ajax/libs/cookieconsent2/3.1.0/cookieconsent.min.css" />
+    <script src="//cdnjs.cloudflare.com/ajax/libs/cookieconsent2/3.1.0/cookieconsent.min.js"></script>
+    @Styles.Render("~/Content/css")
+    @Styles.Render("~/Content/themes/base/css")
+
+    @Scripts.Render("~/bundles/modernizr")
+    @Scripts.Render("~/bundles/jquery")
+    @Scripts.Render("~/bundles/jqueryui")
+    @Scripts.Render("~/bundles/highcharts")
+</head>
     <body>
         <header>
             <div class="content-wrapper">
@@ -58,16 +60,22 @@
 
         @RenderSection("scripts", required: false)
 
-        <script type="text/javascript">
-            var _gaq = _gaq || [];
-            _gaq.push(['_setAccount', 'UA-35046007-1']);
-            _gaq.push(['_trackPageview']);
-
-            (function () {
-                var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-                ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-                var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-            })();
+        <script>
+            window.addEventListener("load", function () {
+                window.cookieconsent.initialise({
+                    "palette": {
+                        "popup": {
+                            "background": "#383b75"
+                        },
+                        "button": {
+                            "background": "#f1d600"
+                        }
+                    },
+                    "content": {
+                        "href": "/About#cookies"
+                    }
+                })
+            });
         </script>
     </body>
 </html>
